# oPsFitter

./: CMakeLists.txt
src/: Fit.cc  Fit.h  Fitter.cc  Fitter.h  Helper.cc  Helper.h  PDFManager.cc  PDFManager.h  PositroniumFitter.cc  PositroniumFitter.h  main.cc  main.h
util/: GammaMCPDF.root  GammaMCPDF_1000bins.root  GammaMCPDF_500bins.root  GammadataPDF.root  GammadataPDF_1000bins.root  Ge68MCPDF.root  Ge68MCPDF_1000bins.root  Ge68MCPDF_1000bins_Hama.root  Ge68MCPDF_500bins.root  Ge68MCPDF_500bins_Hama.root  Ge68dataPDF.root  Ge68dataPDF_1000bins.root  Ge68dataPDF_1000bins_Hama.root  Ge68dataPDF_500bins.root  Ge68dataPDF_500bins_Hama.root
